# ai-app-analyze

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  LICENSE  README.md  TEST_CASES_README.md  init_db.py  pyproject.toml  requirements.txt  start_celery_worker.sh  test_autoglm.py  test_autoglm_enhanced.py  test_integration.py
api/: __init__.py  main.py
core/: __init__.py  config.py  database.py  storage.py  time_utils.py
data/: android_permission_catalog.json
docs/: ARCHITECTURE.md  CONTEXT_INDEX.md  CURRENT_STATE.md  DOCUMENTATION_INDEX.md  OPERATIONS.md  PERSISTENCE.md  PRD.md  PROJECT_TASK_BREAKDOWN.md  PROJECT_TASK_TRACKER.md  README.md  RELEASE_GUIDE.md  SERVER_CONNECTION.md  TESTING.md  TESTING_GUIDE.md  TEST_CASES_COMPLETION_SUMMARY.md  TEST_QUICK_REFERENCE.md
frontend/: Dockerfile  vitest.config.ts
host_agent/: Dockerfile  __init__.py  app.py  models.py  requirements.txt
models/: __init__.py  analysis_result.py  analysis_tables.py  emulator_lease.py  proxy_port_lease.py  task.py  whitelist.py
modules/: __init__.py
scripts/: audit_gate_baseline.py  backfill_ip_locations.py  canary_rollout_smoke.py  ci_gate_entry.sh  daily_gate_healthcheck.py  dev_restart.sh  dev_up.sh  gate_config.py  generate_scheduling_samples.py  load_test_tasks.py  phase4_gate_check.py  phase4_gate_check.sh  phase5_stability_check.py  recover_stuck_tasks.py  restart_services.sh  rollback_smoke.py  rollout_guard.py  run_frontend_service.sh  scheduling_window_snapshot.py  start_services.sh  stop_services.sh  verify_collect_stability.py
(+262 files in other folders)
