[project]
name = "apk-analysis-system"
version = "0.1.0"
description = "APK Intelligent Dynamic Analysis Platform"
authors = [{name = "APK Analysis Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "workers*", "modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=api --cov=core --cov=workers --cov=modules --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["api", "core", "workers", "modules"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
